--- a/build-EmptyBoxClient-Desktop_Qt_5_12_6_GCC_64bit-Debug/settings.ini
+++ b/build-EmptyBoxClient-Desktop_Qt_5_12_6_GCC_64bit-Debug/settings.ini
@@ -6,6 +6,7 @@ SubDeviceId=123
 [HttpClient]
 HttpClientURL=http://192.168.10.27:10080
 ServerRequestMaxNum=1
+TrackerPath=/api/v1/airport/baggage/tracker
 
 [Video]
 CamNum=1
@@ -18,3 +19,4 @@ UsbFrame1=15
 
 [httpServer]
 httpServerPort=16667
+serverPath=/api/v1/airport/baggage/client
